assets/styles.css
/* ... */
.link {
  letter-spacing: -0.05em; }

article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
  display: block; }

audio, canvas, video {
  display: inline-block;
  *display: inline;
  *zoom: 1; }

audio:not([controls]), [hidden] {
  display: none; }

html {
  font-size: 100%;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%; }

body {
  margin: 0;
  font-size: 1em;
  line-height: 1.4; }

::-moz-selection, ::selection {
  background: #a6ddf7;
  color: white;
  text-shadow: none; }

a {
  color: #3e9df7;
  text-decoration: none;
  -webkit-transition: border 0.4s ease-in, color 0.4s;
  -moz-transition: border 0.4s, color 0.4s; }

a:hover {
  color: #606060;
  -webkit-transition: border 0.1s, color 0.3s linear;
  -moz-transition: border, color 0.4s; }

a:focus {
  outline: thin dotted; }

a:hover, a:active {
  outline: 0; }

abbr[title] {
  border-bottom: 1px dotted; }

b, strong {
  font-weight: bold; }

blockquote {
  margin: 1em 40px; }

dfn {
  font-style: italic; }

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #c6c4bf;
  margin: 1.4em 0;
  padding: 0; }

ins {
  background: #ffff99;
  color: black;
  text-decoration: none; }

mark {
  background: yellow;
  color: black;
  font-style: italic;
  font-weight: bold; }

pre, code, kbd, samp {
  font-family: monospace, serif;
  _font-family: "courier new", monospace;
  font-size: 1em; }

pre {
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word; }

q {
  quotes: none; }

q:before, q:after {
  content: "";
  content: none; }

small {
  font-size: 85%; }

sub {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
  top: -0.5em; }

sub {
  bottom: -0.25em; }

ul, ol {
  margin: 0.5em 0 1.5em;
  padding: 0 0 0 15px; }

dd {
  margin: 0 0 0 40px; }

nav ul, nav ol {
  list-style: none;
  list-style-image: none;
  margin: 0;
  padding: 0; }

img {
  border: 0;
  -ms-interpolation-mode: bicubic;
  vertical-align: middle; }

img, embed, object, video {
  max-width: 100%; }

svg:not(:root) {
  overflow: hidden; }

figure, form {
  margin: 0; }

fieldset {
  border: 0;
  margin: 0;
  padding: 0; }

label {
  cursor: pointer; }

legend {
  border: 0;
  *margin-left: -7px;
  padding: 0;
  white-space: normal; }

button, input, select, textarea {
  font-size: 100%;
  font-family: inherit;
  margin: 0;
  vertical-align: baseline;
  *vertical-align: middle; }

button, input {
  line-height: normal; }

button {
  cursor: pointer;
  -webkit-appearance: button;
  *overflow: visible; }

input[type="button"], input[type="reset"], input[type="submit"] {
  cursor: pointer;
  -webkit-appearance: button;
  *overflow: visible; }

button[disabled] {
  cursor: default; }

input[disabled] {
  cursor: default; }

input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
  *width: 13px;
  *height: 13px; }

input[type="search"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box; }
input[type="search"] ::-webkit-search-decoration, input[type="search"] ::-webkit-search-cancel-button {
  -webkit-appearance: none; }

button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0; }

textarea {
  overflow: auto;
  vertical-align: top;
  resize: vertical; }

input:invalid, textarea:invalid {
  background-color: #f0dddd; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

td {
  vertical-align: top; }

.chromeframe {
  margin: 0.2em 0;
  background: #cccccc;
  color: black;
  padding: 0.2em 0; }

.page {
  overflow: hidden; }

header {
  position: relative;
  z-index: 100;
  margin-top: 7px;
  margin-bottom: 2em;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.95); }
@media (min-width: 600px) {
  header {
    margin-bottom: 0; } }

header:before {
  content: "";
  position: absolute;
  top: 0;
  margin-top: -7px;
  width: 100%;
  height: 7px;
  background-image: -webkit-linear-gradient(left, #00467f 0%, #93ebef 50%, #2def96 100%);
  background-image: -moz-linear-gradient(left, #00467f 0%, #93ebef 50%, #2def96 100%);
  background-image: linear-gradient(left, #00467f 0%, #93ebef 50%, #2def96 100%); }

header:after {
  content: "";
  position: absolute;
  bottom: -6px;
  width: 100%;
  height: 6px;
  background-color: rgba(255, 255, 255, 0.5); }

@media (min-width: 600px) {
  .no-touch header {
    position: fixed; } }

.logo {
  display: inline-block;
  padding: 0.43em;
  font-size: 1.76471em;
  color: #00467f;
  font-family: Klavika, "Open Sans", "Helvetica Neue", Arial, san-serif; }

@media (min-width: 600px) {
  .logo {
    float: left; } }
.logo > svg {
  height: 1em;
  width: 13.33333em; }

.logo__icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1.5em;
  line-height: 1em; }

.logo__icon:before {
  vertical-align: bottom; }

.on .logo__main {
  opacity: 1;
  left: 0; }

.logo__main {
  display: inline-block;
  text-transform: uppercase;
  position: relative;
  vertical-align: middle;
  margin-left: 0.5em;
  line-height: 1.2em;
  -webkit-transition: left 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01), opacity 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01);
  -moz-transition: left 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01), opacity 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01);
  transition: left 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01), opacity 0.7s cubic-bezier(0.265, 0.4, 0.52, 1.01); }
@media (min-width: 600px) {
  .logo__main {
    font-size: 0.66667em; } }
@media (min-width: 915px) {
  .logo__main {
    font-size: 1em;
    left: 2em;
    opacity: 0; } }

.nav--main {
  text-align: center;
  text-transform: uppercase;
}
@media (min-width: 600px) {
  .nav--main {
    float: right;
    margin: 1em 0; } }
.nav--main > li {
  display: block;
  margin: 0 1.5em; }
/* ... */

